--- a/package.json
+++ b/package.json
@@ -10,9 +10,24 @@
     "gulp-rename": "^1.2.0"
   },
   "devDependencies": {
+    "babelify": "^7.2.0",
     "bower": "^1.3.3",
+    "brfs": "^1.4.3",
+    "browserify": "^13.0.0",
+    "browserify-ngannotate": "^2.0.0",
+    "bulkify": "^1.1.1",
+    "debowerify": "^1.4.1",
+    "gulp-if": "^2.0.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-uglify": "^1.5.3",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0",
+    "shelljs": "^0.3.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
