--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "brfs": "^1.4.3",
     "browserify": "^13.0.0",
     "browserify-ngannotate": "^2.0.0",
+    "browserify-shim": "^3.8.12",
+    "bulk-require": "^0.2.1",
     "bulkify": "^1.1.1",
     "debowerify": "^1.4.1",
     "gulp-if": "^2.0.0",
@@ -39,5 +41,13 @@
   ],
   "cordovaPlatforms": [
     "ios"
-  ]
+  ],
+  "browser": {
+    "angular": "./www/lib/ionic/js/angular/angular.min.js",
+    "ionic": "./www/lib/ionic/js/ionic.min.js"
+  },
+  "browserify-shim": {
+    "angular": "angular",
+    "ionic": "ionic"
+  }
 }
