IONIC SERVE WITH BROWSERIFY WORKING: * setup browswerify-shim in package.json * setup app-main.js with modular structure * modified ionic.project to use browserify on "ionic serve" command * setup Controllers/ bulk require

--- a/ionic.project
+++ b/ionic.project
@@ -1,5 +1,12 @@
 {
   "name": "ionic-googlemaps",
   "app_id": "",
-  "defaultBrowser": true
+  "defaultBrowser": true,
+  "gulpStartupTasks": [
+    "browserify"
+  ],
+  "watchPatterns": [
+    "www/**/*",
+    "!www/lib/**/*"
+  ]
 }
