hooked gulp tdd task to watch task * runs tdd script on file change

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "babelify": "^7.2.0",
     "bower": "^1.3.3",
     "brfs": "^1.4.3",
+    "browser-sync": "^2.12.3",
     "browserify": "^13.0.0",
     "browserify-ngannotate": "^2.0.0",
     "browserify-shim": "^3.8.12",
     "bulk-require": "^0.2.1",
     "bulkify": "^1.1.1",
     "debowerify": "^1.4.1",
+    "gulp": "^3.9.1",
     "gulp-if": "^2.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-notify": "^2.2.0",
