--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-rename": "^1.2.0"
   },
   "devDependencies": {
+    "angular-animate": "^1.5.5",
     "babelify": "^7.2.0",
     "bower": "^1.3.3",
     "brfs": "^1.4.3",
@@ -35,6 +36,7 @@
     "karma-commonjs": "0.0.13",
     "karma-htmlfile-reporter": "^0.2.2",
     "karma-jasmine": "^0.3.8",
+    "ng-annotate": "^1.2.1",
     "shelljs": "^0.3.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
