--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "bulkify": "^1.1.1",
     "debowerify": "^1.4.1",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-if": "^2.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-notify": "^2.2.0",
+    "gulp-sass": "^2.3.1",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^2.2.14",
     "jasmine-core": "^2.4.1",
