--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "angular-animate": "^1.5.5",
-    "babelify": "^7.2.0",
+    "babelify": "^7.3.0",
     "bower": "^1.3.3",
     "brfs": "^1.4.3",
     "browser-sync": "^2.12.4",
@@ -27,6 +27,8 @@
     "gulp-jshint": "^2.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.3.1",
+    "gulp-sourcemaps": "^2.0.0-alpha",
+    "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^2.2.14",
     "jasmine-core": "^2.4.1",
