--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.1.1",
   "description": "ionic-googlemaps: An Ionic project",
   "dependencies": {
+    "browserify-fs": "^1.0.0",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "jsonfile": "^2.3.1"
   },
   "devDependencies": {
     "angular-animate": "^1.5.5",
